# dotfiles

./: .gitignore  README.org  arch-install.sh  arch-packages  backup.org  nixpkgs-config.nix  packages  packages.sh
doom.d/: config.el  custom.el  dap-mode-launch-json.el  init.el  packages.el
doom/.doom.d/: config.el  custom.el  init.el  packages.el
doomemacs/.doom.d/: config.el  config.org  init.el  init.org  packages.el  packages.org
emacs/: .spacemacs
emacs/.emacs.d/: init.el
keyboard/: MDErgo1-Default-0.kll  MDErgo1-Default-1.kll  MDErgo1-Default-2.kll  MDErgo1-Default-3.kll  MDErgo1-Default-4.kll  MDErgo1-Default-5.kll  MDErgo1-Default-6.kll  MDErgo1-Default-7.kll
literatemacs/: base-config.el  bindings.el  emacs-lisp.org  init.md  init.odt  init.org  orgfile  util.el
nginx/: docker-compose.yaml  ds.sonder.conf  emacs.conf  inhouse.conf  mustacheriders.conf  nginx.org  pricing.sonder.conf  sg1.sonder.conf  sonderdev.conf  www.prevail.conf  www.sonder.conf
nixos/.config/: runelite
offlineimap/: .offlineimaprc
org/: ProTips.org  RubyConf.org  continuous_integration.org
org/org/: BusterTheTestDummy.org  GraphTheory.org  Ironman.org  RamDass.org  better_dsl.org  elfeed.org  feeds.org  journal.org  local-docker.org  rspec.org
ripgrep/: .ripgreprc
scripts/: .editorconfig  docker-services  graphic-session  iyr.sh  kasassh
scripts/scripts/: auto-x  bat_note  (+19 more)
tmux/: .tmux.conf  tmux.conf.bak  tmux.org
xmonad/.xmonad/: build  my-xmonad.cabal  stack.yaml  xmonad.hs
xresources/: .Xresources  beach.Xresources
zsh/: .zprofile  .zshrc  zsh.org
(+158 files in other folders)
