name:                my-xmonad
version:             0.1.0.0
license:             BSD3
author:              Alex Girdler
maintainer:          me@alexgirdler.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  -- other-modules lists custom modules in my .xmonad/lib/ directory
  build-depends:       base
                     , containers
                     , data-default
                     -- , fuzzy
                     , monoid-subclasses
                     , mtl
                     , process
                     , unix
                     , utf8-string
                     , X11
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , dbus
                     , libxml-sax >= 0.7.5
                     , regex-posix >= 0.96
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-type-defaults -Wno-missing-signatures -Wno-unused-top-binds -Werror -threaded
